Add Add Customer Form to base.html

--- a/SunLoanDelangIntegration/templates/base.html
+++ b/SunLoanDelangIntegration/templates/base.html
@@ -91,10 +91,17 @@
       </div>
       <div class="container" id="new_cust" hidden="true">
         <p></br>Customer SMS and Email Notification Management System</p>
-        <p>ADDING NEW Customer<a class="btn btn-primary" href="#" role="button" id="create">Create Customer &raquo;</a>
+        <p>Fill out Form to Add New Customer<br>
+
+
              <form class="form-inline">
-              <input type="text" placeholder="Lookup Customer" class="form-control">
-            <button type="submit" class="btn btn-primary">Search</button>
+           First Name: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
+           Last Name: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
+           Email Address: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
+           Phone Number: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
+           Other: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
+
+            <a class="btn btn-primary" href="#" role="button" id="create">Create Customer &raquo;</a>
 
           </form>
           </p>
