--- a/SunLoanDelangIntegration/templates/base.html
+++ b/SunLoanDelangIntegration/templates/base.html
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,25 +7,19 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="../assets/favicon.ico">
 
     <title>Sun Loan Notification Manager</title>
 
-    <!-- Bootstrap core CSS -->
-   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
-
-
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
+    <link href="../assets/jumbotron.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="../assets/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -40,18 +27,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script>
-    $(document).ready(function(){
-        $("#add").click(function(){
-            $("#main").hide();
-            $("#new_cust").show();
-        });
-        $("#create").click(function(){
-            $("#main").show();
-            $("#new_cust").hide();        });
-    });
-    </script>
+
       </head>
 
   <body>
@@ -99,7 +75,7 @@
            Last Name: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
            Email Address: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
            Phone Number: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
-           Other: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
+           Other: <input type="text" placeholder="Lookup Customer" class="form-control"></br></br>
 
             <a class="btn btn-primary" href="#" role="button" id="create">Create Customer &raquo;</a>
 
@@ -144,9 +120,22 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- Bootstrap core CSS -->
+   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+      <script>
+    $(document).ready(function(){
+        $("#add").click(function(){
+            $("#main").hide();
+            $("#new_cust").show();
+        });
+        $("#create").click(function(){
+            $("#main").show();
+            $("#new_cust").hide();        });
+    });
+    </script>
   </body>
 </html>
 
