Added DelangInegrationTest project in order to test DelangEmobile APIs outside the main application

--- a/DelangIntegrationTest/templates/test.html
+++ b/DelangIntegrationTest/templates/test.html
@@ -53,7 +53,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container" id="main">
-        <p></br>Customer SMS and Email Notification Management System</p>
+        <p></br>Customer SMS and Email Notification Management System Test Suite</p>
         <p><a class="btn btn-primary" href="#" role="button" id="add">Add Customer &raquo;</a>
              <form class="form-inline">
               <input type="text" placeholder="Lookup Customer" class="form-control">
@@ -63,7 +63,7 @@
           </p>
       </div>
       <div class="container" id="new_cust" hidden="true">
-        <p></br>Customer SMS and Email Notification Management System</p>
+        <p></br>Customer SMS and Email Notification Management System Test Suite</p>
         <p>Fill out Form to Add New Customer<br>
 
 
