--- a/SunLoanDelangIntegration/templates/base.html
+++ b/SunLoanDelangIntegration/templates/base.html
@@ -65,22 +65,34 @@
       <div class="container" id="new_cust" hidden="true">
         <p></br>Customer SMS and Email Notification Management System</p>
         <p>Fill out Form to Add New Customer<br>
-
-
-             <form class="form-inline">
-           First Name: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
-           Last Name: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
-           Email Address: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
-           Phone Number: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
-           Other: <input type="text" placeholder="Lookup Customer" class="form-control"></br></br>
-
-            <a class="btn btn-primary" href="#" role="button" id="create">Create Customer &raquo;</a>
-
+          <form class="form-inline" action="/" method="post">
+                <table>
+                    {% csrf_token %}
+                    {{ form.as_table }}
+                </table>
+          </br>
+            <a class="btn btn-primary" href="#" role="button" id="cancel">Cancel &raquo;</a>
+            <input class="btn btn-primary" href="#" id="create" type="submit" value="Create Customer">
           </form>
           </p>
      </div>
     </div>
 
+    <div class="container" id="cust_added" hidden="true">
+        <p></br>Customer SMS and Email Notification Management System</p>
+        <p>Fill out Form to Add New Customer<br>
+            <form class="form-inline" action="" method="post">
+                <table>
+                    {% csrf_token %}
+                    {{ form }}
+                </table>
+          </br>
+            <a class="btn btn-primary" href="#" role="button" id="cancel">Cancel &raquo;</a>
+            <a class="btn btn-primary" href="#" role="button" id="create">Create Customer &raquo;</a>
+          </form>
+          </p>
+     </div>
+    </div>
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
@@ -94,7 +106,7 @@
                     {% endfor %}
                     </ul>
                     {% else %}
-                        <p>No polls are available.</p>
+                        <p>No recent are available.</p>
               {% endif %}
           </p>
         </div>
@@ -124,10 +136,14 @@
             $("#main").hide();
             $("#new_cust").show();
         });
-        $("#create").click(function(){
+        $("#cancel").click(function(){
             $("#main").show();
             $("#new_cust").hide();        });
     });
+        function isEmail(id_email) {
+  var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+  return regex.test(id_email);
+}
     </script>
   </body>
 </html>
