--- a/SunLoanDelangIntegration/templates/base.html
+++ b/SunLoanDelangIntegration/templates/base.html
@@ -29,83 +29,19 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-              {% if user.is_authenticated %}
-                 <p class="navbar-brand" >Welcome, {{ user.username }} <a href="accounts/logout/">[Logout]</a> </p>
-                {% else %}
-                    <p>Welcome, Guest <a href="{% url 'login' %}">[login]</a></p>
-                {% endif %}
-        </div>
-      <div id="navbar" class="navbar-brand navbar-collapse collapse navbar-right">
-          <p>Store: {{ employee.store }}</p>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
+    {% include "nav.html" %}
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container" id="main">
-        <p></br>Customer SMS and Email Notification Management System</p>
-        <p><a class="btn btn-primary" href="#" role="button" id="add">Add Customer &raquo;</a>
-             <form class="form-inline">
-              <input type="text" placeholder="Lookup Customer" class="form-control">
-            <button type="submit" class="btn btn-primary">Search</button>
 
-          </form>
-          </p>
-      </div>
-      <div class="container" id="new_cust" hidden="true">
-        <p></br>Customer SMS and Email Notification Management System</p>
-        <p>Fill out Form to Add New Customer<br>
-          <form class="form-inline" action="/" method="post">
-                <table>
-                    {% csrf_token %}
-                    {{ form.as_table }}
-                </table>
-          </br>
-            <a class="btn btn-primary" href="#" role="button" id="cancel">Cancel &raquo;</a>
-            <input class="btn btn-primary" href="#" id="create" type="submit" value="Create Customer">
-          </form>
-          </p>
-     </div>
-    </div>
+    {% if action == 'edit' %}
+        {% include "edit.html" %}
+    {% else %}
+        {% include "add.html" %}
+    {%  endif  %}
 
-    <div class="container" id="cust_added" hidden="true">
-        <p></br>Customer SMS and Email Notification Management System</p>
-        <p>Fill out Form to Add New Customer<br>
-            <form class="form-inline" action="" method="post">
-                <table>
-                    {% csrf_token %}
-                    {{ form }}
-                </table>
-          </br>
-            <a class="btn btn-primary" href="#" role="button" id="cancel">Cancel &raquo;</a>
-            <a class="btn btn-primary" href="#" role="button" id="create">Create Customer &raquo;</a>
-          </form>
-          </p>
-     </div>
+
     </div>
     {% if customer %}
-    <div class="container">
-        <h1>Customer Details</h1>
-        <p>
-        <ul>
-        <li><strong>Customer Name:</strong> {{ customer.first_name }}&nbsp;{{ customer.last_name }}</li>
-        <li><strong>Customer Email:</strong>{{ customer.email_address }}</li>
-        <li><strong>Customer Number:</strong>{{ customer.phone_number }}</li>
-        <li><strong>Customer Notifications:</strong> {{ customer.messagetype }}</li>
-        <a class="btn btn-med" href="/?customer_id={{ customer.id }}&action=edit" role="button">Edit Customer Data</a>
-        </ul>
-        </p>
-    </div>
+        {% include "view.html" %}
     {% endif %}
     <div class="container">
       <!-- Example row of columns -->
@@ -116,11 +52,11 @@
               {% if customer_list %}
                     <ul>
                     {% for customer in customer_list %}
-                        <li>{{ customer.first_name  }}&nbsp;{{ customer.last_name }}&nbsp;{{ customer.email_address }} <a class="btn btn-med" href="#" role="button">View &raquo;</a></li>
+                        <li>{{ customer.first_name  }}&nbsp;{{ customer.last_name }}&nbsp;{{ customer.email_address }} <a class="btn btn-med" href="/?customer_id={{ customer.id }}" role="button">View &raquo;</a></li>
                     {% endfor %}
                     </ul>
                     {% else %}
-                        <p>No recent are available.</p>
+                        <p>No Customer Information Available.</p>
               {% endif %}
           </p>
         </div>
