added additional info to view.html

--- a/SunLoanDelangIntegration/templates/view.html
+++ b/SunLoanDelangIntegration/templates/view.html
@@ -2,7 +2,7 @@
         <h1>Customer Details - <strong>{{ customer.first_name }}&nbsp;{{ customer.last_name }}</strong></h1>
         <p>
         <ul>
-
+        <li><strong>Account ID: </strong>{{ customer.account_id }}</li>
         <li><strong>Customer Email: </strong>{{ customer.email_address }}</li>
         <li><strong>Customer Number: </strong>{{ customer.phone_number }}</li>
         <li><strong>Customer Notifications: </strong> {{ customer.messagetype }}</li>
