--- a/DelangIntegrationTest/templates/test.html
+++ b/DelangIntegrationTest/templates/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,110 +26,93 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-              {% if user.is_authenticated %}
-                 <p class="navbar-brand" >Welcome, {{ user.username }} <a href="accounts/logout/">[Logout]</a> </p>
-                {% else %}
-                    <p>Welcome, Guest <a href="{% url 'login' %}">[login]</a></p>
-                {% endif %}
-        </div>
-      <div id="navbar" class="navbar-brand navbar-collapse collapse navbar-right">
-          <p>Store: Not Plugged In Yet</p>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
+<body>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container" id="main">
+{% include 'nav.html' %}
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+    <div class="container" id="main">
         <p></br>Customer SMS and Email Notification Management System Test Suite</p>
         <p><a class="btn btn-primary" href="#" role="button" id="add">Add Customer &raquo;</a>
-            <form action="/test/" method="post">
-                {% csrf_token %}
-                {{ form }}
-                <input type="submit" value="Submit" />
-            </form>
-          </p>
-      </div>
-      <div class="container" id="new_cust" hidden="true">
+        <form action="/test/" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit" value="Submit"/>
+        </form>
+        </p>
+    </div>
+    <div class="container" id="new_cust" hidden="true">
         <p></br>Customer SMS and Email Notification Management System Test Suite</p>
         <p>Fill out Form to Add New Customer<br>
 
 
-             <form class="form-inline">
-           First Name: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
-           Last Name: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
-           Email Address: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
-           Phone Number: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
-           Other: <input type="text" placeholder="Lookup Customer" class="form-control"></br></br>
+        <form class="form-inline">
+            First Name: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
+            Last Name: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
+            Email Address: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
+            Phone Number: <input type="text" placeholder="Lookup Customer" class="form-control"></br>
+            Other: <input type="text" placeholder="Lookup Customer" class="form-control"></br></br>
 
             <a class="btn btn-primary" href="#" role="button" id="create">Create Customer &raquo;</a>
 
-          </form>
-          </p>
-     </div>
+        </form>
+        </p>
     </div>
+</div>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
+<div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
         <div class="col-md-4">
-          <h2>Recent Customers</h2>
-          <p>
-              {% if customer_list %}
+            <h2>Recent Customers</h2>
+            <p>
+                {% if customer_list %}
                     <ul>
-                    {% for customer in customer_list %}
-                        <li>{{ customer.first_name  }}&nbsp;{{ customer.last_name }}&nbsp;{{ customer.email_address }} <a class="btn btn-sm" href="#" role="button">View &raquo;</a></li>
-                    {% endfor %}
+                        {% for customer in customer_list %}
+                            <li>{{ customer.first_name }}&nbsp;{{ customer.last_name }}&nbsp;{{ customer.email_address }}
+                                <a class="btn btn-sm" href="#" role="button">View &raquo;</a></li>
+                        {% endfor %}
                     </ul>
-                    {% else %}
-                        <p>No polls are available.</p>
-              {% endif %}
-          </p>
+                {% else %}
+                    <p>No polls are available.</p>
+                {% endif %}
+            </p>
         </div>
 
-      </div>
+    </div>
 
-      <hr>
+    <hr>
 
-      <footer>
+    <footer>
         <p>&copy; Copyright 2016 Sun Loan Company</p>
-      </footer>
-    </div> <!-- /container -->
+    </footer>
+</div> <!-- /container -->
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <!-- Bootstrap core CSS -->
-   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script>
-    $(document).ready(function(){
-        $("#add").click(function(){
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script>
+    $(document).ready(function () {
+        $("#add").click(function () {
             $("#main").hide();
             $("#new_cust").show();
         });
-        $("#create").click(function(){
+        $("#create").click(function () {
             $("#main").show();
-            $("#new_cust").hide();        });
+            $("#new_cust").hide();
+        });
     });
-    </script>
-  </body>
+</script>
+</body>
 </html>
 
 
