--- a/SunLoanDelangIntegration/templates/nav.html
+++ b/SunLoanDelangIntegration/templates/nav.html
@@ -1,20 +1,40 @@
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-                {% if user.is_authenticated %}
-                 <p class="navbar-brand" >Welcome, {{ user.username }} <a href="accounts/logout/">[Logout]</a> </p>
-                {% else %}
-                    <p>Welcome, Guest <a href="{% url 'login' %}">[login]</a></p>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            {% if user.is_authenticated %}
+                <a href="/"><p class="navbar-brand">Welcome, {{ user.username }}</a>
+                <a href="accounts/logout/">[Logout]</a>
+
+                {% if user.is_superuser %}
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                            <li><a href="/data/"> - Manage Data - </a></li>
+                            <li><a href="/test/"> - Test SMS/Email APIs - </a></li>
+                            <li><a href="/admin/"> - User Administration - </a></li>
+
+                        </ul>
+                    </div>
                 {% endif %}
+
+
+
+            {% else %}
+                <p>Welcome, Guest <a href="{% url 'login' %}">[login]</a></p>
+            {% endif %}
+
+
         </div>
-      <div id="navbar" class="navbar-brand navbar-collapse collapse navbar-right">
-          <p>Store: {{ employee.store }}</p>
+        <div id="navbar" class="navbar-brand navbar-collapse collapse navbar-right">
+            <p>Store: {{ employee.store }}</p>
         </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
+    </div>
+</nav>
