Added Verification Code Logic

--- a/SunLoanDelangIntegration/templates/add.html
+++ b/SunLoanDelangIntegration/templates/add.html
@@ -3,7 +3,7 @@
         <p></br>Customer SMS and Email Notification Management System</p>
 
         <form class="form-inline">
-            <a class="btn btn-primary" href="#" role="button" id="add">Add Customer &raquo;</a>
+            <a class="btn btn-primary" href="#" role="button" id="add">Add Customer</a>&nbsp;&nbsp;or&nbsp;&nbsp;
             <input type="text" placeholder="Lookup Customer" class="form-control">
             <button type="submit" class="btn btn-primary">Search</button>
         </form>
