--- a/SunLoanDelangIntegration/templates/add.html
+++ b/SunLoanDelangIntegration/templates/add.html
@@ -2,10 +2,17 @@
     <div class="container" id="main">
         <p></br>Customer SMS and Email Notification Management System</p>
 
-        <form class="form-inline">
+        <form class="form-inline" action="/search/" method="post">
+            {% csrf_token %}
             <a class="btn btn-primary" href="#" role="button" id="add">Add Customer</a>&nbsp;&nbsp;or&nbsp;&nbsp;
-            <input type="text" placeholder="Lookup Customer" class="form-control">
-            <button type="submit" class="btn btn-primary">Search</button>
+            <select name="criteria">
+                        <option value="last_name">Last Name</option>
+                        <option value="first_name">First Name</option>
+                        <option value="phone_number">Phone Number</option>
+                        <option value="account_id">Account Number</option>
+                    </select>
+            <input type="text" placeholder="Lookup Customer" name="search" class="form-control">
+            <input type="submit" href="/search" class="btn btn-primary" value="Search">
         </form>
 
     </div>
