Added more search Functionality and cleaned up UI

--- a/SunLoanDelangIntegration/templates/add.html
+++ b/SunLoanDelangIntegration/templates/add.html
@@ -10,6 +10,7 @@
                         <option value="first_name">First Name</option>
                         <option value="phone_number">Phone Number</option>
                         <option value="account_id">Account Number</option>
+                        <option value="email_address">Email Address</option>
                     </select>
             <input type="text" placeholder="Lookup Customer" name="search" class="form-control">
             <input type="submit" href="/search" class="btn btn-primary" value="Search">
