--- a/SunLoanDelangIntegration/templates/edit.html
+++ b/SunLoanDelangIntegration/templates/edit.html
@@ -3,7 +3,7 @@
       <div class="container" id="cust_edit">
         <p></br>Customer SMS and Email Notification Management System</p>
         <p>Edit Customer Info<br>
-            <form class="form-inline" action="" method="post">
+            <form class="form-inline" action="/update/" method="post">
                  <table>
                     {% csrf_token %}
                     {{ form.as_table }}
