--- a/SunLoanDelangIntegration/templates/nav.html
+++ b/SunLoanDelangIntegration/templates/nav.html
@@ -34,7 +34,11 @@
 
         </div>
         <div id="navbar" class="navbar-brand navbar-collapse collapse navbar-right">
-            <p>Store: {{ employee.store }}</p>
+            <p>Store: {{ employee.store }} </br>
+            <a href="../assets/PDF/Customer%20Contract%20Request%20Form.pdf" download="Contract.pdf">Save "Bad Romance" to your computer</a>
+
+
+            </p>
         </div><!--/.navbar-collapse -->
     </div>
 </nav>
