Expanded Models to include Messages and SentMessages Fixed MakeMigrations Issue Added Logic to ignor sending verification code if SMS option not selected

--- a/DataImport/templates/data.html
+++ b/DataImport/templates/data.html
@@ -48,6 +48,7 @@
             <a class="btn btn-primary" href="/data/employees" role="button" id="add">Create Employees</a>
             <a class="btn btn-primary" href="/data/msg" role="button" id="add">Create Message Types</a>
             <a class="btn btn-primary" href="/data/status" role="button" id="add">Create Statuses</a>
+            <a class="btn btn-primary" href="/data/verbiage" role="button" id="add">Create Default Messages</a>
           </p>
       </div>
 
