--- a/SunLoanDelangIntegration/templates/nav.html
+++ b/SunLoanDelangIntegration/templates/nav.html
@@ -35,7 +35,7 @@
         </div>
         <div id="navbar" class="navbar-brand navbar-collapse collapse navbar-right">
             <p>Store: {{ employee.store }} </br>
-            <a href="../assets/PDF/Customer%20Contract%20Request%20Form.pdf" download="Contract.pdf">Save "Bad Romance" to your computer</a>
+            <a class="nav-bar" href="../assets/PDF/Customer%20Contract%20Request%20Form.pdf" download="Contract.pdf">Customer Form</a>
 
 
             </p>
