--- a/SunLoanDelangIntegration/templates/view.html
+++ b/SunLoanDelangIntegration/templates/view.html
@@ -8,7 +8,7 @@
                 <li><strong>Account ID: </strong>{{ customer.account_id }}</li>
                 <li><strong>Email Address: </strong>{{ customer.email_address }}</li>
                 <li><strong>Phone Number: </strong>{{ customer.phone_number }}</li>
-                <li><strong>Notifications Preference: </strong> {{ customer.messagetype }}</li>
+                <li><strong>Notifications Preference: </strong> {{ customer.notification_setting }}</li>
                 <li><strong>Customer Status: </strong> {{ customer.status.status_name }}</li>
                 </br>
                 <li><strong>Added: </strong> {{ customer.create_date }}</li>
