--- a/SunLoanDelangIntegration/templates/edit.html
+++ b/SunLoanDelangIntegration/templates/edit.html
@@ -9,6 +9,7 @@
                     {{ form.as_table }}
                 </table>
           </br>
+            <input type="hidden" name="customer_id" value="{{ request.GET.customer_id }}">
             <a class="btn btn-primary" href="/" role="button" id="reload">Cancel &raquo;</a>
             <input class="btn btn-primary" href="#" id="create" type="submit" value="Update Customer"></form>
           </p>
