Fixed blank form after search - bug. found during demo

--- a/SunLoanDelangIntegration/templates/send.html
+++ b/SunLoanDelangIntegration/templates/send.html
@@ -12,7 +12,7 @@
                 </br>
                 <form class="form-inline" action="/" method="post">
                     </br>
-                    <select name="templates">
+                    <select name="templates" class="form-control">
                         <option value="">-- Select Notification -- </option>
                         <option value="due">Payment Due</option>
                         <option value="reminder">Refinance Reminder</option>
