--- a/SunLoanDelangIntegration/templates/view.html
+++ b/SunLoanDelangIntegration/templates/view.html
@@ -19,7 +19,10 @@
             {% if customer.status.id > 1 %}
                 <a class="btn btn-primary" href="/view/?customer_id={{ customer.id }}" role="button" id="msg">Message
                     Customer</a></br>
+                <a class="btn btn-primary" href="/view/?customer_id={{ customer.id }}&history=true" role="button" id="hist">View Message
+                    History</a></br>
             {% else %}
+                 <a class="nav-bar" href="../assets/PDF/Customer%20Contract%20Request%20Form.pdf" download="Contract.pdf">Notification Opt-In Form</a>
                 <form class="form-inline" action="/verify/?customer_id={{ customer.id }}" method="post" id="ver_code">
                     {% csrf_token %}
                     <input type="text" size="5" placeholder="Code" class="form-control" name="code">
@@ -29,6 +32,10 @@
             {% endif %}
             <a class="btn btn-primary" href="/" role="button" id="reload">Cancel &raquo;</a>
         </div>
+    </div>
+    <div class="row">
+        <h4>History</h4>
+        {{ history }}
     </div>
     <hr>
 </div>
