--- a/SunLoanDelangIntegration/templates/nav.html
+++ b/SunLoanDelangIntegration/templates/nav.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -12,18 +11,20 @@
                 <a href="/"><p class="navbar-brand">Welcome, {{ user.username }}</a>
                 <a href="accounts/logout/">[Logout]</a>
 
-                {% if user.is_superuser %}
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="nav-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                        {% if user.is_superuser %}
                             <li><a href="/data/"> - Manage Data - </a></li>
                             <li><a href="/test/"> - Test SMS/Email APIs - </a></li>
                             <li><a href="/admin/"> - User Administration - </a></li>
+                        {% endif %}
 
-                        </ul>
-                    </div>
-                {% endif %}
+                    </ul>
+                </div>
+
 
 
 
