DateTime bug fixed on history

--- a/SunLoanDelangIntegration/templates/view.html
+++ b/SunLoanDelangIntegration/templates/view.html
@@ -16,13 +16,16 @@
             </p>
         </div>
         <div class="col-md-6">
+            <a class="nav-bar" href="../assets/PDF/Customer%20Contract%20Request%20Form.pdf" download="Contract.pdf">Notification
+                Opt-In Form</a>
+
             {% if customer.status.id > 1 %}
                 <a class="btn btn-primary" href="/view/?customer_id={{ customer.id }}" role="button" id="msg">Message
                     Customer</a></br>
-                <a class="btn btn-primary" href="/history/?customer_id={{ customer.id }}&history=true" role="button" id="hist">View Message
+                <a class="btn btn-primary" href="/history/?customer_id={{ customer.id }}&history=true" role="button"
+                   id="hist">View Message
                     History</a></br>
             {% else %}
-                 <a class="nav-bar" href="../assets/PDF/Customer%20Contract%20Request%20Form.pdf" download="Contract.pdf">Notification Opt-In Form</a>
                 <form class="form-inline" action="/verify/?customer_id={{ customer.id }}" method="post" id="ver_code">
                     {% csrf_token %}
                     <input type="text" size="5" placeholder="Code" class="form-control" name="code">
