--- a/SunLoanDelangIntegration/templates/view.html
+++ b/SunLoanDelangIntegration/templates/view.html
@@ -17,7 +17,7 @@
         </div>
         <div class="col-md-6">
             <a class="nav-bar" href="../assets/PDF/Customer%20Contract%20Request%20Form.pdf" download="Contract.pdf">Notification
-                Opt-In Form</a>
+                Opt-In Form</a><br>
 
             {% if customer.status.id > 1 %}
                 <a class="btn btn-primary" href="/view/?customer_id={{ customer.id }}" role="button" id="msg">Message
