--- a/SunLoanDelangIntegration/templates/base.html
+++ b/SunLoanDelangIntegration/templates/base.html
@@ -39,7 +39,7 @@
 {% endif %}
 
 {% if customer %}
-        {% include "view.html" %}
+    {% include "view.html" %}
 {% endif %}
 <div class="container">
     <div class="row">
@@ -72,7 +72,6 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -87,10 +86,42 @@
             $("#main").show();
             $("#new_cust").hide();
         });
+        $("ul.errorlist").each(function (index) {
+            $(this).appendTo($(this).parent());
+        });
+
     });
     function isEmail(id_email) {
         var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
         return regex.test(id_email);
+    }
+    function phonenumber(inputtxt) {
+        var phoneno = /^\(?([0-9]{3})\)?[-. ]?([0-9]{3})[-. ]?([0-9]{4})$/;
+        if (inputtxt.value.match(phoneno)) {
+            return true;
+        }
+        else {
+            alert("Not a valid Phone Number - Enter as 9999999999");
+            return false;
+        }
+    }
+</script>
+<script type="text/javascript">
+    document.body.onload = function () {
+        var error = $('#phone_error').val();
+        if (error != null) {
+            $("#add").click()
+        }
+    }
+    function getUrlVars() {
+        var vars = [], hash;
+        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+        for (var i = 0; i < hashes.length; i++) {
+            hash = hashes[i].split('=');
+            vars.push(hash[0]);
+            vars[hash[0]] = hash[1];
+        }
+        return vars;
     }
 </script>
 </body>
